# evobase

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  GAPS.md  README.md  docker-compose.yml  implementation.md  mvp.md  railway.toml  start.sh  styling.md  technical-mvp.md  vercel.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/artifacts/: router.py  schemas.py  storage.py
apps/api/app/auth/: dependencies.py  router.py  schemas.py
apps/api/app/billing/: router.py  schemas.py  service.py  stripe_client.py  token_pricing.py
apps/api/app/core/: config.py  limiter.py  logging.py  middleware.py  sentry.py
apps/api/app/db/: models.py  session.py  sync_session.py
apps/api/app/engine/: queue.py  tasks.py
apps/api/app/github/: auth.py  client.py  router.py  schemas.py  service.py  webhooks.py
apps/api/app/llm/: router.py
apps/api/app/proposals/: router.py  schemas.py
apps/api/app/repos/: detect.py  router.py  schemas.py
apps/api/app/runs/: events.py  router.py  schemas.py  service.py
apps/api/app/scheduling/: auto_pause.py  budget.py  scheduler.py
apps/api/app/settings/: router.py  schemas.py
apps/api/tests/: conftest.py  test_smoke.py
apps/api/tests/artifacts/: test_router.py  test_storage.py  test_upload.py
apps/api/tests/auth/: test_callback.py  test_dependencies.py
apps/api/tests/billing/: test_router.py  test_service.py  test_stripe_client.py  test_token_pricing.py
apps/api/tests/core/: test_logging.py  test_middleware.py  (+1 more)
apps/runner/: pyproject.toml
apps/runner/tests/: test_smoke.py
(+360 files in other folders)
