[project]
name = "selfopt-api"
version = "0.1.0"
description = "SelfOpt Control Plane API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.2",
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=6.4.0",
    "selfopt-runner",
    "sentry-sdk[fastapi]>=2.53.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
selfopt-runner = { path = "../runner", editable = true }
