[project]
name = "coreloop-runner"
version = "0.1.0"
description = "Coreloop Runner - Sandbox execution engine for code optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.80.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
